[gd_scene load_steps=23 format=2]

[ext_resource path="res://art/Enemies/centipede head.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Entities/Enemies/CentipedeHead.gd" type="Script" id=2]
[ext_resource path="res://EffectManager.tscn" type="PackedScene" id=3]
[ext_resource path="res://Effects/Slippy.tscn" type="PackedScene" id=4]
[ext_resource path="res://Enemies/Extras/CentipedeBossBar.tscn" type="PackedScene" id=5]
[ext_resource path="res://art/Effects/BAM_explosion.png" type="Texture" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 25.0
height = 10.0

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 6 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 6 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 6 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 6 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 6 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 6 )
region = Rect2( 64, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 6 )
region = Rect2( 128, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 6 )
region = Rect2( 0, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 6 )
region = Rect2( 64, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "death",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=5]
radius = 37.0

[node name="Centipede" type="KinematicBody2D" groups=["Enemy"]]
collision_layer = 256
collision_mask = 3
script = ExtResource( 2 )
IMMUNITIES = [ ExtResource( 4 ) ]
SPEED = 1250
SLIP_WALL_DAMAGE = 20
SLIP_SPEED_MULT = 3
SLIP_STUN_DUR = 4
STEERING_MULT = 0.25
ROTATE_TO_TARGET = true
health = 90.0
CONTACT_DAMAGE = 10
NUM_SEGMENTS = 15
SLIPPY_SEGMENTS_TO_SLIP = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
rotation = -1.5708
scale = Vector2( 1.25, 1.25 )
frames = SubResource( 2 )

[node name="Back" type="Node2D" parent="."]
position = Vector2( 26, 0 )

[node name="HitCollider" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitCollider"]
shape = SubResource( 5 )

[node name="EffectManager" parent="." instance=ExtResource( 3 )]

[node name="BossBar" parent="." instance=ExtResource( 5 )]

[connection signal="body_entered" from="HitCollider" to="." method="_body_entered"]
